fix z-index error (sidebar.menu-min => 4 button toolbox is under breadcrumb)

--- a/assets/css/ace.css
+++ b/assets/css/ace.css
@@ -780,6 +780,7 @@ li [class^="icon-"], .nav-list li [class^="icon-"], li [class*=" icon-"], .nav-l
 }
 #sidebar.menu-min  {
 	width:42px;
+	z-index:14;
 }
 #sidebar.menu-min + #main-content {
 	margin-left:43px;
